fixed vanishing scrollbar issue

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,7 +10,7 @@
   }
 
   body {
-    @apply bg-[#141414] text-white overflow-x-hidden;
+    @apply bg-[#141414] text-white overflow-x-hidden !overflow-y-scroll !pr-0;
   }
 
   header {
